--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -92,6 +92,23 @@ form.task_form_wrap
   :display block
   :padding 5px 0px
   h2
+    span.task_status
+      :padding 3px 5px
+      :text-transform uppercase
+      :color rgb(255,255,255)
+      :font-size 12px
+      :-moz-border-radius 4px
+      :-webkit-border-radius 4px
+    span.task_status_new
+      :background rgb(200,200,200)
+    span.task_status_open
+      :background rgb(100,100,200)
+    span.task_status_on_hold
+      :background rgb(200,200,100)
+    span.task_status_resolved
+      :background rgb(0,200,0)
+    span.task_status_rejected
+      :background rgb(200,0,0)
     :font-size 16px
     :margin 0px
       :bottom 3px
