Adding reordering to tasks

--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -7,3 +7,4 @@
     = list_tasks(task_list.project,task_list,task_list.tasks,current_target)
   = new_task_link(task_list.project,task_list)
   = new_task_form(task_list.project,task_list,Task.new)
+= task_list_sortable_tag(task_list)
