--- a/app/views/tasks/_drag_action.haml
+++ b/app/views/tasks/_drag_action.haml
@@ -1,3 +1,4 @@
-%p.actions{ :id => "list_actions_#{task.id}", :style => 'display: none'}
-  %span.drag
+/ :style => 'display: none'
+%p.actions{ :id => "list_actions_#{task.id}" }
+  .drag
     =drag_image
