placed upload form in the right hand column on upload index page

--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -1,6 +1,6 @@
 - content_for :column do
   = add_upload_link
-  
+  = edit_side_upload_form(@current_project,Upload.new)
 
 - unless @uploads.empty?
   #uploads
