--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -77,3 +77,20 @@ iframe.upload_form
   :border 0
   :margin-left 5px
   :margin-top 5px
+  
+.index_uploads
+  .content
+    :padding 10px
+  form.new_upload
+    :padding 5px
+    .text_field
+      :padding-right 10px
+      input
+        :font-size 14px
+        :width 100%
+    .file     
+      label
+        :font-size 12px
+      input
+        :width 200px
+        :margin-bottom 15px
