--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -9,16 +9,4 @@
         %p= page.description
 
 - else
-  #primer
-    %p= t('.primer.empty')
-    .box
-      %h2= link_to t('.primer.create_first'), new_project_task_list_path(@current_project)
-      %p= t '.primer.define1'
-      %p= t '.primer.define2'
-      %ul
-        %li= t '.primer.item1'
-        %li= t '.primer.item2'
-        %li= t '.primer.item3'
-        %li= t '.primer.item4'
-      %p= t '.primer.footer1' 
-      %p= t '.primer.footer2'
+  =page_primer(@current_project)
