--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -43,25 +43,27 @@ div.active_page
       :margin-bottom 10px
 
 .index_pages
+  :padding 5px
   .content
     h2
-      :margin-left 20px
+      :margin 0px
+        :bottom 10px
     .page
+      :padding-bottom 5px
+      :border-bottom solid 1px rgb(230,230,230)
       :display block
-      :margin 15px
-        :left 30px
-        :right 0
       h3
         :font-size 14px
-        :margin 0
+        :margin 0px
+          :top 10px
       a
+        :text-decoration none
+      a:hover
         :text-decoration underline
       p
-        :margin
-          :top 3px
-          :left 10px
-        :font-size 12px
-        :color rgb(200,200,200)
+        :margin 5px 0px
+        :font-size 14px
+        :color rgb(100,100,100)
 
 .show_pages
   .page_header
