--- a/app/views/tasks/_drag_action.haml
+++ b/app/views/tasks/_drag_action.haml
@@ -1,4 +1,3 @@
-/ :style => 'display: none'
-%p.actions{ :id => "list_actions_#{task.id}" }
-  .drag
+%p.actions{ :id => "list_actions_#{task.id}", :style => 'display: none' }
+  %span
     =drag_image
