--- a/app/views/uploads/new.haml
+++ b/app/views/uploads/new.haml
@@ -7,5 +7,4 @@
       = f.file_field :file, :size => 25
       = loading('upload')
       = observe_upload_form
-      or
-      = cancel_upload_form_link
+=loading('upload_iframe_form')
