--- a/app/views/layouts/upload_iframe.html.haml
+++ b/app/views/layouts/upload_iframe.html.haml
@@ -5,6 +5,6 @@
     %title
     = stylesheet_link_tag 'application'
     = sprockets_include_tag
-  %body
+  %body{ :class => 'iframe' } 
     .iframe_container
       = yield
