--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -8,14 +8,5 @@
   .clear
   
 - else
-  #primer
-    %p= t('.primer.empty')
-    .box
-      %h2= link_to t('.primer.create_first'), new_project_task_list_path(@current_project)
-      %p= t '.primer.define1'
-      %p= t '.primer.define2'
-      %ul
-        %li= t '.primer.item1'
-        %li= t '.primer.item2'
-        %li= t '.primer.item3'
+  =upload_primer(@current_project)
   
