Fix file uploads in safari

--- a/app/views/uploads/create.erb
+++ b/app/views/uploads/create.erb
@@ -1,16 +1,14 @@
 <%=
 unless @upload.new_record?
-
-
     update_page_tag do |page|
       #page << "$(window.frameElement).(column).hide();"
-      page << "$(window.Parent).down('.uploads_save').insert("
+      page << "top.$('uploads_save').insert("
       page << { :top => upload_save_tag('uploads[]',@upload) }.to_json 
       page << ");"
-      page << "$(window.Parent).down('.uploads_current').insert("
+      page << "top.$('uploads_current').insert("
       page << { :top => list_uploads_edit([@upload],@target) }.to_json
       page << ");"
-      page << "$(window.Parent).down('.uploads_current').show();"
+      page << "top.$('uploads_current').show();"
       #page << "$(parent.window.frameElement).remove();"
     end
 end
