styled uploading and have it working (kind of) properly, whooo!

--- a/app/views/layouts/upload_iframe.html.haml
+++ b/app/views/layouts/upload_iframe.html.haml
@@ -6,5 +6,5 @@
     = stylesheet_link_tag 'application'
     = sprockets_include_tag
   %body{ :class => 'iframe' } 
-    .iframe_container
+    .iframe_container#iframe_container
       = yield
