--- a/app/views/uploads/_iframe_upload.haml
+++ b/app/views/uploads/_iframe_upload.haml
@@ -1,2 +1,2 @@
-%iframe.upload_form{:src => upload_url_for(comment) + "?iframe=true" }
+%iframe.upload_form#upload_form{:src => upload_url_for(comment) + "?iframe=true" }
   &nbsp;
