--- a/app/views/uploads/_link.haml
+++ b/app/views/uploads/_link.haml
@@ -1,5 +1,5 @@
 .upload_area#upload_area{:style => 'display: none;'}
-  %h3
+  %h3#upload_header
     Upload
   =upload_iframe_form(comment)
   .uploads_save{ :style => 'display: block;', :id => 'uploads_save' }
