--- a/app/views/uploads/create.erb
+++ b/app/views/uploads/create.erb
@@ -1,15 +1,11 @@
 <%=
 unless @upload.new_record?
     update_page_tag do |page|
-      #page << "$(window.frameElement).(column).hide();"
-      page << "top.$('uploads_save').insert("
-      page << { :top => upload_save_tag('uploads[]',@upload) }.to_json 
-      page << ");"
-      page << "top.$('uploads_current').insert("
-      page << { :top => list_uploads_edit([@upload],@target) }.to_json
-      page << ");"
+      page << "top.$('uploads_save').insert(#{{ :top => upload_save_tag('uploads[]',@upload) }.to_json});"
+      page << "top.$('uploads_current').insert(#{{ :top => list_uploads_edit([@upload],@comment) }.to_json});"
       page << "top.$('uploads_current').show();"
-      #page << "$(parent.window.frameElement).remove();"
+      page << "top.$$('.upload_form').each(function(e){ e.hide(); })"
+      page << "top.$('uploads_save').insert(#{{ :before => upload_form_params(@comment) }.to_json})"
     end
 end
 %>
