--- a/app/views/uploads/new.haml
+++ b/app/views/uploads/new.haml
@@ -1,10 +1,1 @@
-#new_upload_iframe
-  = error_messages_for :upload
-  - form_for @upload, :url => upload_form_url_for(@target), :html => { :multipart => true, :method => :post } do |f|
-    = hidden_field_tag 'iframe', 'true'
-    .file
-      = t('.select_a_file')
-      = f.file_field :file, :size => 25
-      = loading('upload')
-      = observe_upload_form
-=loading('upload_iframe_form')
+=render :partial => 'uploads/new', :locals => { :upload => @upload, :comment => @comment }
