--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -48,10 +48,11 @@
   :padding 5px
   :clear both
   .upload_thumbnail
-    :float left
-    :padding 5px
-    :border 1px solid rgb(140,140,140)
-    
+    :padding 3px 0px
+    :border-top 1px solid rgb(230,230,230)
+    :font-size 12px
+    %span
+      :vertical-align top
 .upload_list
   :margin 5px
     :left 0px
