--- a/app/views/task_lists/_primer.haml
+++ b/app/views/task_lists/_primer.haml
@@ -1,12 +1,12 @@
 #primer
-  %p= t('.primer.empty')
+  %p= t('.empty')
   .box
-    %h2= link_to t('.primer.create_first'), new_project_task_list_path(project)
-    %p= t '.primer.define'
+    %h2= link_to t('.create_first'), new_project_task_list_path(project)
+    %p= t '.define'
     %ul
-      %li= t '.primer.item1'
-      %li= t '.primer.item2'
-      %li= t '.primer.item3'
-      %li= t '.primer.item4'
-    %p= t '.primer.footer1' 
-    %p= t '.primer.footer2'
+      %li= t '.item1'
+      %li= t '.item2'
+      %li= t '.item3'
+      %li= t '.item4'
+    %p= t '.footer1' 
+    %p= t '.footer2'
