styled error page, refactoring tasks lists rjs actions, hide buttons for pages

--- a/app/views/pages/show.haml
+++ b/app/views/pages/show.haml
@@ -8,8 +8,8 @@
 .buttons#buttons
   = new_page_note_link(@current_project, @page)
   = new_page_divider_link(@current_project, @page)
-  = new_page_task_list_link(@current_project, @page)
-  = new_page_upload_link(@current_project, @page)
+  = #new_page_task_list_link(@current_project, @page)
+  = #new_page_upload_link(@current_project, @page)
 
 = new_note_form(@current_project, @page)
 = new_divider_form(@current_project, @page)
