adding timestamp to avatar image path to prevent caching of old avatars

--- a/app/views/avatars/_micro_avatar.haml
+++ b/app/views/avatars/_micro_avatar.haml
@@ -1,2 +1,2 @@
-.micro_avatar{ :style => "background: url(#{thumb_user_avatar_path(user)}) no-repeat;" }
+.micro_avatar{ :style => "background: url(#{avatar_path_with_timestamp(user)}) no-repeat;" }
   %a{ :href => "#{user_path(user)}" }
