--- a/app/views/avatars/_thumb_avatar.haml
+++ b/app/views/avatars/_thumb_avatar.haml
@@ -1,2 +1,2 @@
-.thumb_avatar{ :style => "background: url(#{thumb_user_avatar_path(user)}) no-repeat;" }
+.thumb_avatar{ :style => "background: url(#{avatar_path_with_timestamp(user)}) no-repeat;" }
   %a{ :href => "#{user_path(user)}", :class => (round_corners ? 'round_corners' : '') }
