Removing a dead link from pages#index when called from outside a project. Restricting routes for all elements

--- a/app/views/pages/_column.haml
+++ b/app/views/pages/_column.haml
@@ -1,4 +1,5 @@
 - content_for :column do
-  = new_page_link(project)
+  - unless project.nil?
+    = new_page_link(project)
   .pages
     = list_pages(pages,current_target)
