--- a/app/views/task_lists/_new.haml
+++ b/app/views/task_lists/_new.haml
@@ -4,4 +4,4 @@
     .submit
       = f.submit t('.submit')
       or
-      = link_to_function t('.cancel'), hide_new_task_list
+      = link_to_function t('form.cancel'), hide_new_task_list
