--- a/public/stylesheets/sass/header.sass
+++ b/public/stylesheets/sass/header.sass
@@ -1,10 +1,11 @@
 div.header
   h1
-    :float left
-    :display block
-    :background url(/images/header_logo.jpg) no-repeat
-    :width 95px
-    :height 17px
+    a
+      :float left
+      :display block
+      :background url(/images/header_logo.jpg) no-repeat
+      :width 95px
+      :height 17px      
     span
       :display none
   div.user_wrap
