--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -96,7 +96,7 @@ div.project_navigation
       :color rgb(0,0,0)
   li.right_side
     :float right
-    :margin-
+    :margin
       :right 0px
       :left 10px
   li.welcome_close
