--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -5,6 +5,6 @@
     = task_list_link(task_list)
   .tasks{ :id => "project_#{task_list.project.id}_task_list_#{task_list.id}" }
     = list_tasks(task_list.project,task_list,task_list.tasks,current_target)
-  = new_task_link(task_list.project,task_list)
-  = new_task_form(task_list.project,task_list,Task.new)
+  = task_link(project,task_list,Task.new)
+  = task_form(project,task_list,Task.new)
 = task_list_sortable_tag(task_list)
