--- a/app/views/tasks/_actions.haml
+++ b/app/views/tasks/_actions.haml
@@ -1,4 +1,5 @@
-.text_actions
-  = edit_task_link(project, task_list)
+=loading_image(task_id('delete_loading',project,task_list,task))
+.text_actions{ :id => task_id('edit_actions',project,task_list,task) }
+  = task_link(project,task_list,task)
   = t('common.or')
-  = delete_task_link(project, task_list, task)
+  = delete_task_link(project,task_list,task)
