--- a/app/views/tasks/show.haml
+++ b/app/views/tasks/show.haml
@@ -1,2 +1,2 @@
-= task_list_column(@current_project, @task_lists, @task)
-= show_task(@task)
+= task_list_column(@current_project,@task_lists,@task)
+= render_task(@current_project,@task_list,@task)
