--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -58,3 +58,12 @@ span.unread_comment_count
   
 .development
   :background url(../images/lobster_dev.jpg) top left no-repeat rgb(49,48,48)
+  
+div.destroy_message
+  :display block
+  :background rgb(231,244,153)
+  :padding 10px
+  :border 1px rgb(209,234,61) solid
+  :-moz-border-radius 8px
+  :-webkit-border-radius 8px
+  :font-size 13px  
