--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -1,7 +1,9 @@
 div.active_task_list
   :background rgb(255,255,0)
+  :border solid 1px rgb(200,200,0)  
 div.active_task
   :background rgb(255,255,0)
+  :border solid 1px rgb(200,200,0)
 div.task_list_wrap
   :margin-top 10px  
   div.task_list
@@ -10,7 +12,9 @@ div.task_list_wrap
       :font-size 12px
 div.task
   :padding 0px
-    :left 15px
+    :left 5px
+  :margin
+    :left 10px
   :-moz-border-radius 5px
   :-webkit-border-radius 5px
   input
@@ -39,46 +43,44 @@ div.task_list, div.task
     :font-size 1em
     span
       :line-height 1em
-      :padding-top 2px
       :position absolute
       :display block
       :width 20px
       :height 20px
-      :left -22px
+      :left -24px
       :top 2px
     
-a.add_task_link
+a.new_task_link
   :font-size 12px
   :margin-left 4px
   :color rgb(120,120,120)
   
-form.task_form_wrap
+.task_form
   :background rgb(200,200,200)
   :-moz-border-radius 4px
   :-webkit-border-radius 4px  
-  div.task_form
-    :padding 10px
-    :margin-bottom 10px
-    .text_field
-      :padding-right 10px
-      input
-        :width 100%
-        :border
-          :top solid 1px rgb(90,90,90)
-          :left solid 1px rgb(150,150,150)
-          :bottom solid 1px rgb(150,150,150)
-          :right solid 1px rgb(90,90,90)
-    .select
-      label
-        :padding-top 3px
-      input
-        :padding 0px
-        :margin 0px
-    .submit
+  :padding 10px
+  :margin-bottom 10px
+  .text_field
+    :padding-right 10px
+    input
       :width 100%
-      :text-align right
-      input
-        :float none
+      :border
+        :top solid 1px rgb(90,90,90)
+        :left solid 1px rgb(150,150,150)
+        :bottom solid 1px rgb(150,150,150)
+        :right solid 1px rgb(90,90,90)
+  .select
+    label
+      :padding-top 3px
+    input
+      :padding 0px
+      :margin 0px
+  .submit
+    :width 100%
+    :text-align right
+    input
+      :float none
 #task_lists
   :clear both
   
@@ -128,4 +130,3 @@ span.task_status_resolved
   :background rgb(0,200,0)
 span.task_status_rejected
   :background rgb(200,0,0)
-    
