--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -14,7 +14,7 @@
     .name
       :font-size 12px
       :margin-bottom 5px
-      :border-bottomss solid 1px rgb(235,235,235)      
+      :border-bottom solid 1px rgb(235,235,235)      
       a
         :font-size 12px
         :font-weight bold
@@ -74,6 +74,9 @@
   :clear both
   :border solid 1px rgb(200,200,200)
   :padding 5px
+  :margin
+    :right 1px
+    :bottom 5px
   h3
     :color rgb(100,100,100)
     :font-size 11px
