Partial commit for task lists JS helpers

--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -1,5 +1,5 @@
 - content_for :column do
-  - unless project.nil?
+  - if project
     = new_task_list_link
     = new_task_list_form(project,TaskList.new)
   #task_lists  
