--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -103,7 +103,7 @@ a.loading_button
     :font-weight bold
     :background url(../images/loading_button_wrap_bg.jpg) no-repeat right
       
-a.button
+a.button, a.new_task_list_link
   :background url(../images/button_bg.jpg) no-repeat left
   :font-size 12px
   :padding 5px
