--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -2,7 +2,7 @@
   .task_list{ :class => "#{ 'active_task_list' if current_target == task_list }" }
     = task_list_partial_action_links(task_list.project,task_list)
     =# show_comments_count(task_list)
-    = task_list_link(task_list)
+    = the_task_list_link(task_list)
   .tasks{ :id => "project_#{task_list.project.id}_task_list_#{task_list.id}" }
     = list_tasks(task_list.project,task_list,task_list.tasks,current_target)
   = task_link(project,task_list,Task.new)
