--- a/app/views/task_lists/_destroy_message.haml
+++ b/app/views/task_lists/_destroy_message.haml
@@ -1,5 +1,5 @@
 .destroy_message
-  The Task called
+  The Task List called
   %strong
-    =task.name
+    =task_list.name
   was successfully deleted
