--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,7 +19,7 @@
           .banner
             = yield :banner
         %div{ :class => "#{@content_for_column.nil? ? 'content_wrap_single' : 'content_wrap'}" }
-          .content
+          .content#content
             = yield
         -unless @content_for_column.nil?
           .column_wrap
