--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -1,7 +1,7 @@
 - content_for :column do
   - if project
     = task_list_link(project,TaskList.new)
-    = new_task_list_form(project,TaskList.new)
+    = task_list_form(project,TaskList.new)
   #task_lists  
     = list_task_lists(project,task_lists,current_target)
   =# comments_settings
