--- a/app/views/task_lists/index.haml
+++ b/app/views/task_lists/index.haml
@@ -2,6 +2,7 @@
 
 - unless @task_lists.empty?
   #activities
-    = list_main_task_list(@current_project,@task_lists)
+    = list_activities(@activities)
+    =# list_main_task_list(@current_project,@task_lists)
 - else
   = task_list_primer(@current_project)
