--- a/app/views/task_lists/_primer.haml
+++ b/app/views/task_lists/_primer.haml
@@ -1,7 +1,7 @@
 #primer
   %p= t('.empty')
   .box
-    %h2= link_to t('.create_first'), new_project_task_list_path(project)
+    %h2= link_to_function t('.create_first'), show_task_list(project,TaskList.new)
     %p= t '.define'
     %ul
       %li= t '.item1'
