--- a/app/views/uploads/_primer.haml
+++ b/app/views/uploads/_primer.haml
@@ -1,10 +1,10 @@
 #primer
-  %p= t('.primer.empty')
+  %p= t('.empty')
   .box
-    %h2= link_to t('.primer.create_first'), new_project_task_list_path(project)
-    %p= t '.primer.define1'
-    %p= t '.primer.define2'
+    %h2= link_to t('.create_first'), new_project_task_list_path(project)
+    %p= t '.define1'
+    %p= t '.define2'
     %ul
-      %li= t '.primer.item1'
-      %li= t '.primer.item2'
-      %li= t '.primer.item3'
+      %li= t '.item1'
+      %li= t '.item2'
+      %li= t '.item3'
