--- a/app/views/task_lists/_task_list.haml
+++ b/app/views/task_lists/_task_list.haml
@@ -1,3 +1,3 @@
 .task_list{ :id => task_list_id(:item,project,task_list), :class => "#{ 'active_task_list' if current_target == task_list }" }
-  = task_list_partial_action_links(task_list.project,task_list)
+  =# task_list_partial_action_links(task_list.project,task_list)
   = the_task_list_link(task_list)
