--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -1,4 +1,5 @@
 .task{ :id => task_id(:item,project,task_list,task), :class => "#{ 'active_task' if current_target == task } task_item" }
+  =task_status_image(task.status)
   =task_drag_link(project,task_list,task)
   =#show_comments_count(task)
   = link_to task.name, project_task_list_task_path(project,task_list,task)
