Styles for forgot password and reset password

--- a/app/views/users/reset_password.haml
+++ b/app/views/users/reset_password.haml
@@ -1,6 +1,7 @@
-%p
-  We just sent you an email to
-  = params[:email]
-  so you can retrieve your password.
-%p
-  Follow the link inside this email to log into Teambox!
+%h2= t('.title')
+
+- form_tag '' do |f|
+  %p
+    = t('.login_link_sent', :email => params[:email]) 
+  %p
+    = t('.follow_the_link')
