--- a/app/views/users/forgot_password.haml
+++ b/app/views/users/forgot_password.haml
@@ -4,5 +4,6 @@
   .login.text_field
     = label_tag t('.email')
     = text_field_tag 'email', '', :class => 'focus'
-  %p= link_to t('.back'), login_path
-  = submit_tag t('.submit')
+  %p
+    = link_to t('.back'), login_path
+    = submit_tag t('.submit')
