--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -5,3 +5,5 @@
   #task_lists  
     = list_task_lists(project,task_lists,current_target)
   =# comments_settings
+  = reorder_task_list_link(project,task_lists)
+  
