--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,6 +4,7 @@
     %meta{ 'http-equiv' => "content-type", :content => "text/html;charset=utf-8" }
     %title
       Teambox
+      =@page_title
     = stylesheet_link_tag 'application'
     = sprockets_include_tag
   %body{ :class => "#{location_name} #{I18n.locale} #{ENV['RAILS_ENV']}"}
