Updating after a major rebase

--- a/public/stylesheets/sass/header.sass
+++ b/public/stylesheets/sass/header.sass
@@ -3,9 +3,9 @@ div.header
     a
       :float left
       :display block
-      :background url(/images/header_logo.png) no-repeat
-      :width 134px
-      :height 24px      
+      :background url(/images/header_logo.jpg) no-repeat
+      :width 95px
+      :height 17px      
     span
       :display none
   div.user_wrap
@@ -37,4 +37,3 @@ div.header
             :color rgb(120,120,120)
           a:hover
             :color rgb(255,255,255)
-            
