--- a/app/views/projects/_primer.haml
+++ b/app/views/projects/_primer.haml
@@ -1,13 +1,13 @@
 #primer
-  %p= t('.primer.empty')
+  %p= t('.empty')
   .box
-    %h2= link_to t('.primer.create_first'), new_project_path
-    %p= t '.primer.define1'
-    %p= t '.primer.define2'
+    %h2= link_to t('.create_first'), new_project_path
+    %p= t '.define1'
+    %p= t '.define2'
     %ol
-      %li= t '.primer.item1'
-      %li= t '.primer.item2'
-      %li= t '.primer.item3'
-      %li= t '.primer.item4'
-      %li= t '.primer.item5'
-    %p= t '.primer.footer' 
+      %li= t '.item1'
+      %li= t '.item2'
+      %li= t '.item3'
+      %li= t '.item4'
+      %li= t '.item5'
+    %p= t '.footer' 
