General code style.

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -3,7 +3,7 @@
     = activity_comment_icon(comment,CommentRead.user(current_user).unread?(comment))
     = #comment_actions_link(comment)
     = thumb_avatar(comment.user)
-    - if false ##unless comment.hours.nil?
+    - if false ##if comment.hours
       .hours
         = hour_image
         %span
