--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,15 +14,15 @@
       = hot_flashes(flash)
       = navigation(@current_project,@recent_projects)
       .wrapper
-        -unless location_name?('welcome_users')
+        - unless location_name?('welcome_users')
           = project_navigation(@current_project)
-        -unless @content_for_banner.nil?
+        - if @content_for_banner
           .banner
             = yield :banner
         %div{ :class => "#{@content_for_column.nil? ? 'content_wrap_single' : 'content_wrap'}" }
           .content#content
             = yield
-        -unless @content_for_column.nil?
+        - if @content_for_column
           .column_wrap
             .column#column
               = yield :column
